--- a/app/src/main/res/layout/activity_reservations.xml
+++ b/app/src/main/res/layout/activity_reservations.xml
@@ -7,4 +7,52 @@
     android:background="#FCF6EAD0"
     tools:context=".ReservationsActivity">
 
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="96dp"
+        android:layout_height="103dp"
+        android:layout_marginTop="4dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/logo_application" />
+
+    <Button
+        android:id="@+id/deconnecter"
+        android:layout_width="111dp"
+        android:layout_height="46dp"
+        android:layout_marginTop="16dp"
+        android:background="#F44336"
+        android:text="Déconnecter"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.862"
+        app:layout_constraintStart_toEndOf="@+id/imageView2"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <EditText
+        android:id="@+id/reservations"
+        android:layout_width="268dp"
+        android:layout_height="287dp"
+        android:layout_marginTop="128dp"
+        android:background="@color/white"
+        android:ems="10"
+        android:gravity="start|top"
+        android:hint="la liste des résertvations"
+        android:inputType="textMultiLine"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.496"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/deconnecter" />
+
+    <Button
+        android:id="@+id/retourr"
+        android:layout_width="123dp"
+        android:layout_height="53dp"
+        android:layout_marginTop="76dp"
+        android:background="#3F51B5"
+        android:text="Retour"
+        android:textColor="#FFFFFF"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/reservations" />
+
 </android.support.constraint.ConstraintLayout>
