--- a/app/src/main/res/layout/activity_validation.xml
+++ b/app/src/main/res/layout/activity_validation.xml
@@ -47,6 +47,7 @@
         android:id="@+id/message"
         android:layout_width="284dp"
         android:layout_height="179dp"
+        android:layout_marginTop="196dp"
         android:background="@color/white"
         android:ems="10"
         android:gravity="start|top"
@@ -56,6 +57,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="286dp" />
+        app:layout_constraintTop_toBottomOf="@+id/deconnecter" />
 
 </android.support.constraint.ConstraintLayout>
